<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="299dp"
        android:layout_height="147dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="55dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/red_b"
        android:tint="#00F5F5F5"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        app:srcCompat="@drawable/phone" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="296dp"
        android:layout_height="144dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="55dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/yellow_b"
        android:tint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879"
        app:srcCompat="@drawable/help" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="296dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="70dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/green_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        app:srcCompat="@drawable/meet" />

    <Button
        android:id="@+id/button"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="17dp"
        android:text="@string/resign"
        app:backgroundTint="#52535C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:text="@string/bravetogether"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="31dp"
        android:text="@string/id"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.979" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="32dp"
        android:text="@string/phone_no"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.306" />

</androidx.constraintlayout.widget.ConstraintLayout>